[package]
name = "linefeed"
description = "Interactive terminal input reader"

authors = ["Murarth <murarth@gmail.com>"]
version = "0.1.0"

documentation = "http://murarth.github.io/linefeed/linefeed/index.html"
homepage = "https://github.com/murarth/linefeed"
repository = "https://github.com/murarth/linefeed"

keywords = ["console", "terminal", "input", "readline"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
assert_matches = "1.0"
kernel32-sys = "0.2"
libc = "0.2"
nix = "0.6"
ole32-sys = "0.2"
shell32-sys = "0.1"
winapi = "0.2"
