[package]
name = "linefeed"
description = "Interactive terminal input reader"

authors = ["Murarth <murarth@gmail.com>"]
version = "0.2.6"

documentation = "https://docs.rs/linefeed/"
homepage = "https://github.com/murarth/linefeed"
repository = "https://github.com/murarth/linefeed"

categories = ["command-line-interface"]
keywords = ["console", "terminal", "input", "readline"]
license = "MIT/Apache-2.0"
readme = "README.md"

[badges]
travis-ci = { repository = "murarth/linefeed" }

[dependencies]
libc = "0.2"
unicode-normalization = "0.1.5"
unicode-width = "0.1.4"

[target.'cfg(unix)'.dependencies]
nix = "0.7"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2"
ole32-sys = "0.2"
shell32-sys = "0.1"
winapi = "0.2"

[dev-dependencies]
assert_matches = "1.0"
